# important-memories

./: .gitignore  CLAUDE.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: a7b8c9d0e1f2_add_frame_preview_url.py  b1c2d3e4f5a6_update_enums.py  b8c9d0e1f2a3_add_event_expires_at_and_extensions.py  c3d4e5f6a7b8_add_photo_format.py  c9d0e1f2a3b4_add_event_notification_flags.py  d0e1f2a3b4c5_add_plan_v3_2_tiers.py  d4e5f6a7b8c9_add_frame_caption_voice_rotation.py  e1f2a3b4c5d6_add_event_public_share_token.py  e5f6a7b8c9d0_add_user_id_to_guests.py  ebee75088b30_init_schema.py  f2a3b4c5d6e7_add_guest_avatar_bio.py  f6a7b8c9d0e1_add_missing_enum_values.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  db.py  errors.py  logging.py  redis.py  security.py  short_code.py
backend/app/infra/: fcm_client.py  queue.py  rate_limiter.py  s3_client.py  smtp_client.py  yookassa_client.py
backend/app/repos/: device_repo.py  email_code_repo.py  event_repo.py  frame_repo.py  guest_repo.py  payment_repo.py  user_repo.py
backend/app/services/: album_service.py  auth_service.py  event_service.py  guest_service.py  media_service.py  memories_service.py  payment_service.py  report_service.py
backend/scripts/: backfill_previews.py
backend/tests/: conftest.py  helpers.py  test_album.py  test_archives.py  test_auth.py  test_devices.py  test_events.py  test_frame_delete.py  test_frames.py  test_guests.py  test_health.py  test_payments.py  test_rate_limit.py  test_reports.py
(+149 files in other folders)
