[project]
name = "important-memories-backend"
version = "0.1.0"
description = "Important Memories — backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.13",
    "redis>=5.2",
    "arq>=0.26",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "aiosmtplib>=3.0",
    "email-validator>=2.2",
    "boto3>=1.35",
    "httpx>=0.27",
    "yookassa>=3.5",
    "structlog>=24.4",
    "sentry-sdk[fastapi]>=2.18",
    "python-multipart>=0.0.20",
    "pillow>=11.0",
    "qrcode[pil]>=8.0",
    "google-auth>=2.36",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
